# simdxml

./: .gitignore  Cargo.toml  README.md
bench/: run-x86.sh
crates/simdxml/: Cargo.toml  README.md
crates/simdxml-cli/: Cargo.toml  README.md
crates/simdxml-cli/src/: main.rs
crates/simdxml/benches/: parse_bench.rs
crates/simdxml/src/: bloom.rs  error.rs  lib.rs
crates/simdxml/src/batch/: mod.rs
crates/simdxml/src/index/: lazy.rs  mod.rs  structural.rs  tags.rs
crates/simdxml/src/parallel/: mod.rs
crates/simdxml/src/persist/: mod.rs
crates/simdxml/src/simd/: avx2.rs  mod.rs  neon.rs  sse42.rs
crates/simdxml/src/xpath/: analyze.rs  ast.rs  eval.rs  mod.rs  parser.rs  simd_pred.rs
crates/simdxml/tests/: libxml2_conformance.rs  pugixml_conformance.rs  xpath_edge_cases.rs
scripts/: bench_to_csv.py
testdata/: pugixml_xpath_tests.json
testdata/realworld/: patent-ep.xml  patent-us.xml
