[package]
name = "simdxml-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A fast XML/XPath query tool, powered by SIMD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simdxml/simdxml"
readme = "README.md"
keywords = ["xml", "xpath", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "sxq"
path = "src/main.rs"

[dependencies]
simdxml = { version = "0.1.0", path = "../simdxml" }
memmap2 = "0.9"
