[package]
name = "simdxml"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "SIMD-accelerated XML parser with full XPath 1.0 support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cigrainger/simdxml"
readme = "README.md"
keywords = ["xml", "xpath", "simd", "parser", "performance"]
categories = ["parser-implementations", "text-processing"]
exclude = ["testdata/", "benches/"]

[dependencies]
nom = "7"
thiserror = "2"
memchr = "2"
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.5"
quick-xml = "0.37"
roxmltree = "0.20"
xml-rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "parse_bench"
harness = false
